--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
-  <body>
-    <p>
-      <font size="7">
-        Test
-      </font>
-    </p>
-  </body>
+    <body>
+        <p id="title">
+            <center>
+                <font size="7" style="color:#5ad7ed;">
+                    Loidpop2's Podcasts
+                </font>
+            </center>
+        </p>
+    </body>
 </html>
