--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="shortcut icon" type="image/jpg" href="/logo.jpg"/>
+    </head>
     <body>
         <p id="title">
             <center>
