--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="icon" type="image/jpg" href="/logo.jpg"/>
+        <link rel="icon" type="image/jpg" href="/data/logo.jpg"/>
     </head>
     <body>
         <p id="title">
