--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     </head>
     <body>
         <p id="title">
+            <div id="background_logo" style="display:inline-flex;">
+                <img src="data/background.png" width="100%" height="70%">
+            </div>
             <center>
                 <font size="7" style="color:#5ad7ed;">
                     Loidpop2's Podcasts
