bg image main testing

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <p id="title">
-            <div id="background_logo" style="display:inline-flex;">
+            <div id="background_logo" style="display:flexbox;">
                 <img src="/data/background.jpg" width="100%" height="70%">
             </div>
             <center>
