bg image main testing again

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
         <link rel="icon" type="image/jpg" href="/data/logo.jpg"/>
     </head>
     <body>
-        <p id="title">
+        <p id="title" style="width: 100%; height: 70%; background-image: url('/data/background.jpg');">
             <div id="background_logo" style="display:flexbox;">
-                <img src="/data/background.jpg" style="width: 100%; height: 70%;">
+                <img src="/data/background.jpg" >
             </div>
             <center>
                 <font size="7" style="color:#5ad7ed;">
