--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
         <link rel="icon" type="image/jpg" href="/data/logo.jpg"/>
     </head>
     <body>
-        <p id="title" style="width: 100%; height: 70%; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%;">
-            <center>
-                <font size="7" style="color:#5ad7ed;">
-                    Loidpop2's Podcasts
-                </font>
-            </center>
+        <p id="title" style="text-align: center; width: 100%; height: 70%; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%;">
+            <font size="7" style="color:#5ad7ed;">
+                Loidpop2's Podcasts
+            </font>
         </p>
     </body>
 </html>
