bg image main testing again x5

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <p id="title" style="text-align: center; width: 100%; height: 70%; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%;">
-            <font size="7" style="color: #5ad7ed; top: 30%;">
+            <font size="7" style="color: #5ad7ed; top: 30%; position: absolute;">
                 Loidpop2's Podcasts
             </font>
         </p>
