--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="icon" type="image/jpg" href="/data/logo.jpg"/>
     </head>
     <body>
-        <p id="title" style="text-align: center; width: 100%; height: 70%; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%;">
+        <p id="title" style="filter: brightness(0.3); filter: saturate(85%); text-align: center; width: 100%; height: 70%; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%;">
             <font size="7" style="color: #5ad7ed; top: 30%; position: absolute; transform: translate(-50%, -50%);">
                 Loidpop2's Podcasts
             </font>
