main page article sec. 1

--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
                 Loidpop2's Podcasts
             </font>
         </p>
+        <p id="main-content">
+            <center>
+                <font size="5">
+                    Welcome!
+                </font>
+            </center>
+            <font size="4">
+                This is a website made for sharing Podcasts that I have created. I am in an 8th Grade Podcasting class, and I love designing code, so I made this.<br><br>
+
+                
+            </font>
+        </p>
     </body>
 </html>
