--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <p class="abril-fatface-regular" id="title" style="filter: brightness(0.2); filter: saturate(75%); text-align: center; width: 100%; height: 70%; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%;">
+        <p class="abrilfatfaceregular" id="title" style="filter: brightness(0.2); filter: saturate(75%); text-align: center; width: 100%; height: 70%; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%;">
             <font size="7" style="color: #5ad7ed; top: 30%; position: absolute; transform: translate(-50%, -50%);">
                 Loidpop2's Podcasts
             </font>
         </p>
         <p id="main-content">
             <center>
-                <font size="5">
+                <font size="5" class="robotobold">
                     Welcome!
                 </font>
             </center>
-            <font size="4">
+            <font size="4" class="robotoregular">
                 This is a website made for sharing Podcasts that I have created. I am in an 8th Grade Podcasting class, and I love designing code, so I made this.<br><br>
 
                 
