--- a/index.html
+++ b/index.html
@@ -16,13 +16,24 @@
             <center>
                 <font size="5" class="robotobold">
                     Welcome!
+                    <br><br>
                 </font>
             </center>
             <font size="4" class="robotoregular">
-                This is a website made for sharing Podcasts that I have created. I am in an 8th Grade Podcasting class, and I love designing code, so I made this.<br><br>
+                &emsp;This is a website made for sharing Podcasts that I have created. I am in an 8th Grade Podcasting class, and I love designing code, so I made this.<br><br>
 
-                
+                &emsp;Here are my podcasts. They can revolve around anything and are in-depth to the topic. I try to make them interesting and all vary in length in order for more interest from the audience.
             </font>
+            <div id="podcast-list">
+                <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 20%; display: inline-flexbox;">
+                    <img style="display: inline-block;" src="/data/podcasts/how_does_ones_autism/logo.png">
+                    <p style="display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
+                        <font size="6" style="background-color: #040404;">Dev Note: Insert Time</font>
+                        <br><br>
+                        <font size="4" style="background-color: #040404;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
+                    </p>
+                </div>
+            </div>
         </p>
     </body>
 </html>
