--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             </font>
             <div id="podcast-list">
                 <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 20%; display: inline-flexbox;">
-                    <img style="display: inline-block; height: 17%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/how_does_ones_autism/logo.png">
+                    <img style="display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/how_does_ones_autism/logo.png">
                     <p style="display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
-                        <font size="6" style="background-color: #040404;">Dev Note: Insert Time</font>
+                        <font size="6" style="background-color: #040404; color: #dddddd;">Dev Note: Insert Time</font>
                         <br><br>
-                        <font size="4" style="background-color: #040404;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
+                        <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
                     </p>
                 </div>
             </div>
