--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 &emsp;Here are my podcasts. They can revolve around anything and are in-depth to the topic. I try to make them interesting and all vary in length in order for more interest from the audience.
             </font>
             <div id="podcast-list">
-                <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 20%; display: inline-flexbox;">
+                <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 20%; display: flex; flex-wrap: wrap;">
                     <img style="display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/how_does_ones_autism/logo.png">
                     <p style="display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
                         <font size="6" style="background-color: #040404; color: #dddddd;">Dev Note: Insert Time</font>
