--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </font>
             <div id="podcast-list">
                 <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 20%; display: flex; flex-wrap: wrap;">
-                    <img style="display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/how_does_ones_autism/logo.png">
-                    <p style="display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
+                    <img style="padding: 75px; display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/how_does_ones_autism/logo.png">
+                    <p style="padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
                         <font size="6" style="background-color: #040404; color: #dddddd;">Dev Note: Insert Time</font>
                         <br><br>
                         <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
