player for podcast ep. 1

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
                 &emsp;Here are my podcasts. They can revolve around anything and are in-depth to the topic. I try to make them interesting and all vary in length in order for more interest from the audience.
             </font>
             <div id="podcast-list">
-                <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 20%; display: flex; flex-wrap: wrap;">
-                    <img style="padding: 75px; display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/how_does_ones_autism/logo.png">
-                    <p style="padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
-                        <font size="6" style="padding: 10px; background-color: #040404; color: #dddddd;">Dev Note: Insert Time</font>
-                        <br><br>
-                        <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
-                    </p>
-                </div>
+                <a href="data/podcasts/how_does_ones_autism/index.html">
+                    <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 20%; display: flex; flex-wrap: wrap;">
+                        <img style="padding: 75px; display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/how_does_ones_autism/logo.png">
+                        <p style="padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
+                            <font size="6" style="padding: 10px; background-color: #040404; color: #dddddd;">Dev Note: Insert Time</font>
+                            <br><br>
+                            <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
+                        </p>
+                    </div>
+                </a>
             </div>
         </p>
     </body>
