--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
                         </p>
                         <p style="text-decoration: none;">
-                            <font size="5" style="color: #3c93c1; transform: translateY(-50%); top: 50%; right:20px; padding: 50px; position: relative;">
+                            <font size="5" style="color: #3c93c1; transform: translateY(-50%); top: 50%; right:70px; position: relative;">
                                 Click To Listen
                             </font>
                         </p>
