--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <br><br>
                             <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
                         </p>
-                        <p style="text-decoration: none;">
+                        <p style="text-decoration: none; color: #3c93c1; display: inline-block; transform: translateY(-50%); top: 50%; right: 70px; position: relative;">
                             <font size="5" style="color: #3c93c1; display: inline-block; transform: translateY(-50%); top: 50%; right: 70px; position: relative;">
                                 Click To Listen
                             </font>
