--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <br><br>
                             <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
                         </p>
-                        <p style="text-decoration: none; color: #3c93c1; float: right;">
+                        <p style="text-decoration: none; color: #3c93c1; float: right; top: 48.5%;">
                             <font size="5" style="color: #3c93c1;">
                                 Click To Listen
                             </font>
