--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                             <br><br>
                             <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
                         </p>
-                        <p style="text-decoration: none; color: #3c93c1; float: right; top: 48.5%;">
-                            <font size="5" style="color: #3c93c1;">
+                        <p style="text-decoration: none; color: #64c9ff; transform: translateY(-50%); top: 50%; position: relative; display: inline-block;">
+                            <font size="5" style="color: #64c9ff;">
                                 Click To Listen
                             </font>
                         </p>
