--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
                             <br><br>
                             <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
                         </p>
-                        <p style="text-decoration: none; color: #64c9ff; transform: translateY(-50%); top: 50%; position: relative; display: inline-block;">
-                            <font size="5" style="color: #64c9ff;">
-                                Click To Listen
-                            </font>
-                        </p>
+                        <font size="5" style="text-decoration: none; color: #64c9ff; transform: translateY(-50%); top: 50%; position: relative; display: inline-block;">
+                            Click To Listen
+                        </font>
                     </div>
                 </a>
             </div>
