--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                             <br><br>
                             <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
                         </p>
-                        <font size="5" style="text-decoration: none; color: #64c9ff; transform: translateY(-50%); top: 50%; position: relative; display: inline-block;">
+                        <p style="text-decoration: none; color: #64c9ff; transform: translateY(-50%); top: 50%; position: relative; display: inline-block;">
                             Click To Listen
-                        </font>
+                        </p>
                     </div>
                 </a>
             </div>
