--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <br><br>
                             <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
                         </p>
-                        <p style="text-decoration: none; color: #64c9ff; transform: translateY(-50%); top: 50%; position: relative; display: inline-block;">
+                        <p style="text-decoration: none; padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative; color: #20b2d3;">
                             Click To Listen
                         </p>
                     </div>
