--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
                             <font size="6" style="padding: 10px; background-color: #040404; color: #dddddd;">8:34</font>
                             <br><br>
                             <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
-                        </p>
-                        <p style="text-decoration: none; padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative; color: #20b2d3;">
-                            Click To Listen
+                            <br>
+                            <font size="5" style="color: #5dcde9;">Click to Listen</font>
                         </p>
                     </div>
                 </a>
