--- a/data/podcasts/how_does_ones_autism/index.html
+++ b/data/podcasts/how_does_ones_autism/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <center>
-            <font size="7" style="color: #5ad7ed;">
+            <font size="7" style="color: #5ad7ed;" class="abrilfatfaceregular">
                 <br><br><br><br>
-                How does one's affect their academical abilities?
+                How Does One's Autism Affect Their Academical Abilities?
                 <br><br><br>
             </font>
             <audio controls style="width: 55%;">
