--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <p class="abrilfatfaceregular" id="title" style="filter: brightness(0.2); filter: saturate(75%); text-align: center; width: 100%; height: 70%; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%;">
+        <p class="abrilfatfaceregular" id="title" style="filter: brightness(0.2); filter: saturate(75%); text-align: center; width: 100%; height: auto; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%; padding: 0px;">
             <font size="7" style="color: #5ad7ed; top: 30%; position: absolute; transform: translate(-50%, -50%);">
                 Loidpop2's Podcasts
             </font>
@@ -31,7 +31,7 @@
                         <p style="text-decoration: none; padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
                             <font size="6" style="padding: 10px; background-color: #040404; color: #dddddd;">Dev Note: Insert Time</font>
                             <br><br>
-                            <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
+                            <font size="4" style="width: 20%; color: #ececec;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
                         </p>
                         <p style="text-decoration: none; padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative; color: #20b2d3;">
                             Click To Listen
