--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <p class="abrilfatfaceregular" id="title" style="filter: brightness(0.2); filter: saturate(75%); text-align: center; width: 100%; height: auto; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%; padding: 0px;">
+        <p class="abrilfatfaceregular" id="title" style="filter: brightness(0.2); filter: saturate(75%); text-align: center; width: 100%; height: 450px; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%; padding: 0px;">
             <font size="7" style="color: #5ad7ed; top: 30%; position: absolute; transform: translate(-50%, -50%);">
                 Loidpop2's Podcasts
             </font>
