--- a/index.html
+++ b/index.html
@@ -7,38 +7,65 @@
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <p class="abrilfatfaceregular" id="title" style="filter: brightness(0.2); filter: saturate(75%); text-align: center; width: 100%; height: 450px; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%; padding: 0px;">
-            <font size="7" style="color: #5ad7ed; top: 30%; position: absolute; transform: translate(-50%, -50%);">
-                Loidpop2's Podcasts
-            </font>
-        </p>
-        <p id="main-content">
-            <center>
-                <font size="5" class="robotobold">
-                    Welcome!
-                    <br><br>
+        <div id="all-content">
+            <p class="abrilfatfaceregular" id="title" style="filter: brightness(0.2); filter: saturate(75%); text-align: center; width: 100%; height: 450px; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%; padding: 0px;">
+                <font size="7" style="color: #5ad7ed; top: 30%; position: absolute; transform: translate(-50%, -50%);">
+                    Loidpop2's Podcasts
                 </font>
-            </center>
-            <font size="4" class="robotoregular">
-                &emsp;This is a website made for sharing Podcasts that I have created. I am in an 8th Grade Podcasting class, and I love designing code, so I made this.<br><br>
+            </p>
+            <p id="main-content">
+                <center>
+                    <font size="5" class="robotobold">
+                        Welcome!
+                        <br><br>
+                    </font>
+                </center>
+                <font size="4" class="robotoregular">
+                    &emsp;This is a website made for sharing Podcasts that I have created. I am in an 8th Grade Podcasting class, and I love designing code, so I made this.<br><br>
 
-                &emsp;Here are my podcasts. They can revolve around anything and are in-depth to the topic. I try to make them interesting and all vary in length in order for more interest from the audience.
-            </font>
-            <br><br>
-            <div id="podcast-list">
-                <a href="data/podcasts/how_does_ones_autism/" style="text-decoration: none;">
-                    <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 20%; display: flex; flex-wrap: wrap;">
-                        <img style="padding: 1.5%px; display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/how_does_ones_autism/logo.png">
-                        <p style="text-decoration: none; padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
-                            <font size="6" style="padding: 10px; background-color: #040404; color: #dddddd;">8:34</font>
-                            <br><br>
-                            <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
+                    &emsp;Here are my podcasts. They can revolve around anything and are in-depth to the topic. I try to make them interesting and all vary in length in order for more interest from the audience.
+                </font>
+                <br><br>
+                <div id="podcast-list">
+                    <a href="data/podcasts/how_does_ones_autism/" style="text-decoration: none;">
+                        <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 22%; display: flex; flex-wrap: wrap;">
+                            <img style="padding: 1.5%px; display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/how_does_ones_autism/logo.png">
+                            <p style="text-decoration: none; padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
+                                <font size="6" style="padding: 10px; background-color: #040404; color: #dddddd;">8:34</font>
+                                <br><br>
+                                <font size="4" style="color: #dddddd;">Dive into Autism Spectrum Disorder and Academics at Once!</font>
+                                <br>
+                                <font size="5" style="color: #5dcde9;">Click to Listen</font>
+                            </p>
+                        </div>
+                    </a>
+                </div>
+            </p>
+        </div>
+        <script>
+            function sleep(ms) {
+                return new Promise(resolve => setTimeout(resolve, ms));
+            }
+            function screenwidth()
+            {
+                if (!window.length >= 892)
+                {
+                    document.getElementById("all-content").innerHTML = `
+                        <center>
+                            <font size="7" style="color: #fe2d2d;">
+                                Your Screen Width is Too Small!
+                            </font>
                             <br>
-                            <font size="5" style="color: #5dcde9;">Click to Listen</font>
-                        </p>
-                    </div>
-                </a>
-            </div>
-        </p>
+                            <font size="3" style="color: #7a7a7a;">
+                                892 Pixels Minimum
+                            </font>
+                        </center>
+                    `;
+                }
+                sleep(750);
+                screenwidth();
+            }
+            screenwidth();
+        </script>
     </body>
 </html>
