--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </center>
                     `;
                 }
-                sleep(750);
+                await sleep(750);
                 screenwidth();
             }
             screenwidth();
