--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             function sleep(ms) {
                 return new Promise(resolve => setTimeout(resolve, ms));
             }
-            function screenwidth()
+            async function screenwidth()
             {
                 if (!window.length >= 892)
                 {
