--- a/index.html
+++ b/index.html
@@ -43,13 +43,10 @@
             </p>
         </div>
         <script>
-            function sleep(ms) {
-                return new Promise(resolve => setTimeout(resolve, ms));
-            }
             async function screenwidth()
             {
                 while (true) {
-                    if (!window.length >= 892)
+                    if (!window.length >= 885)
                     {
                         document.getElementById("all-content").innerHTML = `
                             <center>
@@ -58,12 +55,12 @@
                                 </font>
                                 <br>
                                 <font size="3" style="color: #7a7a7a;">
-                                    892 Pixels Minimum
+                                    885 Pixels Minimum
                                 </font>
                             </center>
                         `;
                     }
-                    await sleep(750);
+                    await new Promise(r => setTimeout(r, 500));
                 }
             }
             screenwidth();
