--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     await new Promise(r => setTimeout(r, 500));
                 }
             }
-            screenwidth();
+            screenwidth()
         </script>
     </body>
 </html>
