--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 </font>
                                 <br>
                                 <font size="3" style="color: #7a7a7a;">
-                                    885 Pixels Minimum
+                                    885 Pixels in Width Minimum
                                 </font>
                             </center>
                         `;
