--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     await sleep(500);
                 }
             }
-            screenwidth()
+            screenwidth();
         </script>
     </body>
 </html>
