--- a/data/podcasts/how_does_ones_autism__quick/index.html
+++ b/data/podcasts/how_does_ones_autism__quick/index.html
@@ -11,7 +11,7 @@
             <font size="7" style="color: #5ad7ed;" class="abrilfatfaceregular">
                 <br><br>
                 How Does One's Autism Affect Their Academical Abilities?
-                <br>Quick Version<br>
+                <br><font size="7" style="color: #FDDF23;" class="abrilfatfaceregular">Quick Version</font><br>
                 <br><br><br>
             </font>
             <audio controls style="width: 55%;">
