--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css">
-        <link rel="icon" type="image/jpg" href="/data/logo.jpg"/>
+        <link rel="icon" type="image/jpeg" href="/data/logo.jpeg"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div id="all-content">
-            <p class="abrilfatfaceregular" id="title" style="filter: brightness(0.2); filter: saturate(75%); text-align: center; width: 100%; height: 450px; background-image: url('/data/background.jpg'); background-repeat: no-repeat; background-size: 100%; padding: 0px;">
+            <p class="abrilfatfaceregular" id="title" style="filter: brightness(0.2); filter: saturate(75%); text-align: center; width: 100%; height: 450px; background-image: url('/data/background.jpeg'); background-repeat: no-repeat; background-size: 100%; padding: 0px;">
                 <font size="7" style="color: #5ad7ed; top: 30%; position: absolute; transform: translate(-50%, -50%);">
                     Loidpop2's Podcasts
                 </font>
