--- a/data/podcasts/how_does_ones_autism/index.html
+++ b/data/podcasts/how_does_ones_autism/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="/style.css">
-        <link rel="icon" type="image/jpeg" href="/data/logo.jpeg"/>
+        <link rel="icon" href="/data/logo.jpeg"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
