--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
                             </p>
                         </div>
                     </a>
+                    <a href="data/podcasts/why_do_parents_parent" style="text-decoration: none;">
+                        <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 150px; display: flex; flex-wrap: wrap;">
+                            <img style="padding: 1.5%px; display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/why_do_parents_parent/logo.png">
+                            <p style="text-decoration: none; padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
+                                <font size="6" style="padding: 10px; background-color: #040404; color: #dddddd;">9:40</font>
+                                <br><br>
+                                <font size="4" style="color: #dddddd;">A Message to Teens: Why do we have Parents?</font>
+                                <br>
+                                <font size="5" style="color: #5dcde9;">Click to Listen</font>
+                            </p>
+                        </div>
+                    </a>
                 </div>
             </p>
         </div>
