--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <br><br>
                     <a href="data/podcasts/what_is_ai/" style="text-decoration: none;">
                         <div id="p1" style="background-color: #2b2b2b; width: 95%; height: 150px; display: flex; flex-wrap: wrap;">
-                            <img style="padding: 1.5%px; display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;">
+                            <img style="padding: 1.5%px; display: inline-block; height: 95%; transform: translateY(-50%); top: 50%; position: relative;" src="/data/podcasts/what_is_ai/logo.png">
                             <p style="text-decoration: none; padding: 75px; display: inline-block; transform: translateY(-50%); top: 50%; position: relative;">
                                 <font size="6" style="padding: 10px; background-color: #040404; color: #dddddd;">3:44</font>
                                 <br><br>
